<resources>
    <string name="app_name">BookingDemoApp</string>
    <string name="label_ok">OK</string>
    <string name="new_recurring_booking">New recurring booking</string>
    <string name="label_whos_going">Who\'s going?</string>
    <string name="label_who">Who</string>
    <string name="label_where">Where</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="label_date">Date</string>
    <string name="label_choose_room">Choose a room</string>
    <string name="label_choose_days">Choose days</string>


    <string name="label_summary">Summary</string>
    <string name="label_from">From %1$s</string>
    <string name="label_end">Ends %1$s</string>
    <string name="label_every">Every %1$s</string>
    <string name="label_day_count">You are booking  %1$d days</string>
    <string name="label_booking_reference">Booking Reference Number: \n%1$s</string>

    <string name="btn_review_booking">Review bookings</string>
    <string name="btn_change_booking">Change booking</string>
    <string name="btn_done">Done</string>

</resources>